<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E0EE6C"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="#AEDF72"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/labelapp"
            android:textColor="@color/judul"
            android:textSize="35sp"
            android:textStyle="italic" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editDpn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="7"
                    android:hint="@string/nm_dp"
                    android:inputType="textPersonName"/>

                <EditText
                    android:id="@+id/editBlk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nm_bk"
                    android:inputType="textPersonName"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edit6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="8"
                    android:hint="@string/tpt_lahir"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/Birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Tgl_lahir"
                    android:clickable="true"
                    android:editable="false"/>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="30dp">


            </TableRow>

            <EditText
                android:id="@+id/edit5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/almt"
                android:inputType="textPersonName"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="36dp"
                android:text="Jenis Kelamin"
                android:textSize="18sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="Laki Laki"
                    android:textSize="15sp"/>

                <RadioButton
                    android:id="@+id/edit7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="Perempuan"
                    android:textSize="15sp"/>

            </TableRow>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="15dp"
                android:text="Agama"
                android:textSize="18sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <RadioButton
                    android:id="@+id/edit14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="11"
                    android:text="Islam"/>

                <RadioButton
                    android:id="@+id/edit15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="Kristen"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/edit16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="11"
                    android:text="Katolik"/>

                <RadioButton
                    android:id="@+id/edit17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="Hindu" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/edit18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="11"
                    android:text="Buddha"/>

                <RadioButton
                    android:id="@+id/edit13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="Konghucu"/>
            </TableRow>
                <RadioButton
                    android:id="@+id/edit12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="11"
                    android:text="Aliran Kepercayaan"/>


            <EditText
                android:id="@+id/edit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="8"
                android:hint="@string/tlp"
                android:inputType="text|phone"/>

            <EditText
                android:id="@+id/edit19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="8"
                android:hint="@string/mail"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/edit20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="8"
                android:hint="@string/ps"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/edit21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="8"
                android:hint="@string/pass"
                android:inputType="textPassword"/>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="80dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_bk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:background="@color/btn"
                android:text="@string/bt_bck"  />
            <Button
                android:id="@+id/bt_dtr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:background="@color/btn"
                android:text="@string/bt_dftr"  />

        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>